Fix mobile menu z-index - set below the value for the topbar

--- a/backend/app/assets/stylesheets/sidebar.css
+++ b/backend/app/assets/stylesheets/sidebar.css
@@ -59,7 +59,7 @@
 	padding: 0;
 	position: absolute; top: 60px;
 	width: 100%;
-	z-index: 900;
+	z-index: 80;
 }
 
 .mobile_menu_base {
@@ -75,7 +75,7 @@
 }
 
 .mobile_menu_dropdown {
-	z-index: 1030;
+	z-index: 82;
 	height: auto;
 	width: 0%;
 	overflow-x: hidden;
